# Cygnus

./: .env.example  .gitignore  CONTEXT.md  pyproject.toml
.githooks/: commit-msg  pre-push
.github/: BRANCH_PROTECTION_CHECKLIST.md  CODEOWNERS  NAMING_CONVENTIONS.md  PULL_REQUEST_TEMPLATE.md
app/: __init__.py  config.py  worker.py
cygnus/: __init__.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
prototypes/: command-center.html  console-audience.html  console-overview-a.html  console-overview-b.html  console-shell.html  landing.html  style-tile.html
scripts/: arkon_replacement_inventory.py  diff_coverage_gate.py  external_checkout_audit.py  external_checkout_preserve.py  governance_golden_path_gate.py  install_git_hooks.sh  repo_check.sh  repo_guard.py  upstream_cutover_gate.py
tests/: test_api_command_center.py  test_app_assembly_recovery.py  test_arkon_replacement_inventory.py  test_boot_smoke_recovery.py  test_boundary_freeze_truth.py  test_database_baseline_import.py  test_domain_audience.py  test_domain_lifecycle.py  test_domain_objects.py  test_evidence_normalization.py  test_evidence_records.py  test_external_checkout_audit.py  test_external_checkout_preserve.py  test_governance_router_seams.py  test_infra_wiring_recovery.py  test_integrations_nanobot_tools.py  test_internalization_identity_cutover.py  test_knowledge_baseline_import.py  test_mcp_baseline_import.py  test_mrp_baseline_import.py  test_package_boundary_convergence.py  test_protocol_baseline_import.py  test_provider_baseline_import.py  test_publish_actions.py  test_publish_preview.py  test_publish_propagation.py  test_publish_recovery.py  test_publish_surface.py  test_recovery_overview.py  (+39 more)
(+324 files in other folders)
