[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cygnus"
version = "0.1.0"
description = "Support-domain core for the Cygnus support knowledge operating system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[tool.setuptools.packages.find]
include = ["cygnus*"]
