[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cygnus"
version = "0.1.0"
description = "Support-domain core for the Cygnus support knowledge operating system."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.9",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.3",
    "google-genai>=1.0.0",
    "openai>=1.30.0",
    "anthropic>=0.30.0",
    "fastmcp>=2.0.0",
    "bcrypt>=4.0.0",
    "pyjwt>=2.8.0",
    "content-core>=1.14.1,<2",
    "pymupdf>=1.25.0",
    "python-docx>=1.1.0",
    "minio>=7.2.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.5.0",
    "loguru>=0.7.2",
    "python-dotenv>=1.0.1",
    "httpx>=0.27.0",
    "aiosmtplib>=3.0.0",
    "arq>=0.26",
    "redis[hiredis]>=5.0",
    "cryptography>=44.0",
    "mammoth>=1.12.0",
    "tiktoken>=0.8.0",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "xlrd>=2.0",
    "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.0",
]

[tool.setuptools.packages.find]
include = ["cygnus*", "app*"]
